<resources>
    <string name="app_name">Intermediate Alert Dialog</string>
    <string name="menu_add">Add</string>
    <string name="name">Name</string>
    <string name="title">Enter the Details</string>
    <string name="phone">Phone Number</string>
    <string name="dob">Date of Birth  : </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="blank_name">Enter the Name</string>
    <string name="blank_phone">Enter the Phone Number</string>
    <string name="date_valid">Date of Birth not Valid</string>
</resources>
