<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:padding="@dimen/activity_horizontal_margin"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView_title"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/colorAccent"
        android:paddingBottom="@dimen/activity_horizontal_margin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorBlue"
        android:padding="0dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText_name"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/name"
        android:padding="@dimen/activity_horizontal_margin">
    <requestFocus />
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/editText_phone"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/phone"
        android:padding="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding ="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_dob_label"
            android:layout_gravity="left"
            android:text="@string/dob"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_dob"
            android:textAlignment="center"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageButton_dob"
            android:layout_gravity="right"
            android:src="@drawable/calendar"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/button_save"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/button_cancel"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>